--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <!-- ReactJS -->
         <script src="https://fb.me/react-15.0.2.js"></script>
         <script src="https://fb.me/react-dom-15.0.2.js"></script>
-        <scropt src="https://npmcdn.com/redux@3.5.2/dist/redux.min.js"></script>
+        <script src="https://npmcdn.com/redux@3.5.2/dist/redux.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.4.5/react-redux.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
         <script src="https://npmcdn.com/rd3/build/public/js/react-d3.min.js"></script>
     </head>
